2003-07-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/CustomBookText.py: Add to CVS. 
	* src/plugins/ReadPkg.py: Enable "..." in the menu item.
	* src/plugins/ReadNative.py: Likewise.
	* src/plugins/ReadGedcom.py: Likewise.
	* src/Report.py: Put "Style" label in singular form (was plural).

2003-07-14  Donald Peterson  <dpeterson@sigmaxi.org>
	* src/docgen/LaTeXDoc.py: Regress UNICODE support to be only a
	commented line in the output rather than implemented by default
	since not all LaTeX installations include ucs.sty by default.

2003-07-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py (PluginDialog.build_tree): Remove reverse() call.
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.
	* src/plugins/BookReport.py (BookReportDialog.make_document): 
	Move item initialization here (was in make_report). 
	This is necessary to define all the styles, including non-paragraph 
	ones, before opening single book doc.
	* src/plugins/DetDescendantReport.py: Remove empty setup().
	* src/plugins/AncestorReport.py: Likewise. 
	* src/plugins/Ancestors.py: Likewise. 
	* src/plugins/DescendReport.py: Likewise. 
	* src/plugins/FtmStyleAncestors.py: Likewise. 
	* src/plugins/FamilyGroup.py: Likewise. 
	* src/plugins/DetAncestralReport.py: Likewise. 

2003-07-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivSummary.py (IndivSummary.__init__):
	Provide default value of 0 to newpage argument. 
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.

2003-07-11  Donald Peterson  <dpeterson@sigmaxi.org>
	* src/docgen/LaTeXDoc.py: Added UNICODE support and '&' handling

2003-07-11  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/SimpleBookTitle.py: Define self.style_name before
        calling Report.BareReportDialog.__init__().

2003-07-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsCfg.py (GrampsPreferences.select): Conditional get_path(). 
	* src/Plugins.py (PluginDialog.on_node_selected): Likewise.